[package]
name = "worms_server"
version = "1.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
anyhow = "1.0.75"

# Async support and utilities
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["tokio-io", "async-await", "sink", "default"] }

# Concurrency and synchronization
async-trait = "0.1.74"
parking_lot = { version = "0.12.3", features = ["default"] }
dashmap = "6.1.0"

# Logging and environment
log = "0.4.20"
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"

# Parsing and CLI
clap = { version = "4.5.20", features = ["default", "derive"] }

# Locale and encoding
encoding_rs = "0.8.33"

# Data structures and algorithm utilities
rustc-hash = "2.0.0"
nohash-hasher = "0.2.0"
bitflags = "2.6.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true