[package]
name = "worms_server"
version = "1.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
eyre = "0.6.12"

# Async support and utilities
tokio = { version = "1.43.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["tokio-io", "async-await", "sink", "default"] }

# Concurrency and synchronization
parking_lot = { version = "0.12.3", features = ["default"] }
dashmap = "6.1.0"

# Logging and environment
log = "0.4.20"
env_logger = { version = "0.11.5", features = ["auto-color", "default"] }
dotenvy = "0.15.7"
color-eyre = "0.6.3"

# Parsing and CLI
clap = { version = "4.5.21", features = ["default", "derive"] }

# Locale and encoding
encoding_rs = "0.8.35"

# Data structures and algorithm utilities
nohash-hasher = "0.2.0"
bitflags = "2.6.0"

# Rate limiting
governor = "0.7.0"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = 3

# Make all the packages way smaller
[profile.dev]
debug = 1 # less precise locations

[profile.dev.package."*"]
debug = false # no debug symbols for deps
opt-level = 2 # makes their code smaller too
